2010-02-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_setjmp.c: fixed --stack-auto for model-huge
	* support/regression/Makefile.in: keep the hex-file

2010-02-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/mappings.i,
	  src/z80/peeph-z80.def:
	  Decompose multiline macros, fixing #1570701, #1921731.

2010-02-04 Borut Razem <borut.razem AT siol.net>

	* src/mcs51/main.c, src/z80/main.c, src/ds390/main.c, src/hc08/main.c,
	  src/xa51/main.c, src/SDCCmain.c, src/port.h:
	  list of C runtime initialization object files crt0.c moved to port
	  structure, defined for each target targets

2010-02-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-gbz80.def,
	  src/z80/mappings.i:
	  Fixed gbz80 port to work with new assembler.

2010-02-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCsymt.c(addSymChain): fixed --xstack float support in model-huge

2010-02-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCmain.c(assemble): don't destroy asmName twice

2010-02-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/ralloc.c (packRegsDPTRuse): fixed bug 2938110
	* support/regression/tests/bug2938110.c: new, added

2010-02-01 Borut Razem <borut.razem AT siol.net>

	* sdas/linksrc/lkar.c, sdas/linksrc/lksdcclib.c:
	  detection of asxxxx v3.0 and higher rel files

2010-01-31 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Minor peephole.

2010-01-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* configure,
	* configure.in: added device/lib/huge/Makefile

2010-01-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/asm/mcs51/features.h: added _RETURN
	* device/include/setjmp.h: adapted for model-huge
	* device/lib/_setjmp.c: adapted for xstack and model-huge
	* device/lib/_decdptr.c(_decdptr): __naked
	* device/lib/_logexpf.c (_fs_cordic_rshift_r765_unsigned): __naked
	* device/lib/_mullong.c: use _AUTOMEM from sdcc-lib.h